# openenv-curator

./: CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.md  run_baselines.py
data/: ground_truth.json  items.json  tasks.json
scripts/: fetch_data.py
server/: __init__.py  app.py  curator_environment.py  grader.py
